spacing issues

--- a/frontend/src/assets/style/layout.scss
+++ b/frontend/src/assets/style/layout.scss
@@ -108,7 +108,7 @@ nav.navbar {
   overflow: hidden;
 
   @include mobile {
-    padding: 20px 15px;
+    padding: 30px 15px;
   }
 
   h1,
